# 13_homework_computer-vision

./: CMakeLists.txt  README.md
demo/: helpers.cpp  helpers.h  main.cpp
test/: test.cpp
